--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,51 +1,20 @@
 {
+	"version": "0.2.0",
 	"configurations": [
 		{
-			"type": "totvs_language_web_debug",
+			"type": "totvs_language_debug",
 			"request": "launch",
-			"name": "Smart Client Web Debug",
+			"name": "Depuração do idioma TOTVS",
 			"program": "${command:AskForProgramName}",
+			"cwb": "${workspaceFolder}",
+			"smartclientBin": "../totvs/bin/smartclient/smartclient.exe",
 			"isMultiSession": true,
 			"enableTableSync": true,
-			"smartClienteUrl": "https://srverp/webapp/",
-			"enableMultiThread": true
+			"extendFeatures": {
+				"charDetails": false
+			}
 		}
 	],
-	"lastPrograms": [
-		{
-			"label": "U_WORK_QUERY_SQL"
-		},
-		{
-			"label": "U_WORK_QUERY_SQL1"
-		},
-		{
-			"label": "U_ARQUIVO_TEMP_1"
-		},
-		{
-			"label": "apsdu"
-		},
-		{
-			"label": "U_ARQUIVO_TEMP_2"
-		},
-		{
-			"label": "U_ARQUIVO_TEMP_3"
-		},
-		{
-			"label": "U_FUNCAO_BANCO_DE_DADOS"
-		},
-		{
-			"label": "U_CRIAR_TXT"
-		},
-		{
-			"label": "U_CRIAR_TXT_MACRO"
-		},
-		{
-			"label": "U_CRIAR_TXT_2"
-		},
-		{
-			"label": "U_CRIAR_TXT_4"
-		}
-	],
-	"lastProgramExecuted": "U_CRIAR_TXT_4",
+	"lastProgramExecuted": "<cancel>",
 	"lastProgramArguments": []
 }
