--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "totvsLanguageServer.welcomePage": false,
-    "totvsLanguageServer.web.navigator": "",
-    "totvsLanguageServer.web.navigator.open.external": true
+    "totvsLanguageServer.welcomePage": false
 }
